<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_world" tools:ignore="Typos">\nCupcake ipsum dolor sit amet. Sugar plum biscuit sweet roll toffee bear claw. Caramels muffin jujubes apple pie cake cake. Croissant topping jelly beans donut macaroon danish dragée chupa chups. Topping tart liquorice powder halvah jelly beans. Cake cheesecake biscuit ice cream muffin. Brownie pudding donut chocolate cake chupa chups liquorice carrot cake lollipop lollipop. Pudding sweet roll jelly-o ice cream. Lollipop chupa chups jelly-o. Caramels jujubes pudding pudding muffin cookie. android love bear claw cheesecake croissant fruitcake gummi bears donut. Danish dessert pastry. Chocolate cake oat cake sugar plum marzipan lollipop gummi bears chupa chups toffee. Ice cream soufflé bear claw carrot cake cheesecake jelly-o gummies jelly-o gummi bears. Dragée cake topping jelly beans. Cake macaroon macaroon pie pie oat cake brownie marshmallow jujubes. Fruitcake cheesecake gummies bonbon. Donut sweet roll donut carrot cake tootsie roll cotton candy macaroon cake. Tiramisu ice cream cookie marzipan lollipop caramels topping dessert brownie. Dragée chocolate sweet roll chocolate cake. Dessert powder dessert cake. Pie gingerbread cake pudding apple pie. Tiramisu biscuit pie croissant carrot cake cookie macaroon. Sesame snaps halvah donut marzipan muffin caramels. Cheesecake ice cream jelly beans powder toffee danish fruitcake. Chocolate bar caramels oat cake. Macaroon sweet donut tootsie roll. Oat cake lemon drops chupa chups tootsie roll liquorice candy canes apple pie pudding. Chocolate cake liquorice sweet croissant. Chupa chups biscuit danish gummies donut. Cake chocolate cake dragée. Toffee apple pie cotton candy brownie. Candy canes caramels danish chocolate bar bear claw. Chupa chups sesame snaps oat cake sesame snaps oat cake chocolate cake caramels. Candy cupcake biscuit cupcake. Tiramisu powder icing cookie cookie gummi bears donut lemon drops. Marshmallow wafer marzipan. Jelly beans sweet sesame snaps.</string>
    <string name="google_maps_key">AIzaSyBIPIyBbvDxUHPyEi9Qy-phu9VuOzy7iUI</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="i_love_you">I loved you:  yet the love, maybe,\n
Has not extinguished in my heart;\n
But hence may not it trouble thee;\n
I do not want to make you sad.\n
I loved you hopelessly and mutely,\n
Now with shyness, now with jealousy being vexed;\n
I loved you so sincerely, so fondly,\n
Likewise may someone love you next.
    </string>
    <string-array name="occurence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
    <string name="input_hint">text</string>
    <string name="label_normal">Normal:</string>
    <string name="label_auto_fit">Auto fit:</string>
    <string name="example">This is an example</string>
    <string name="demo_realm_click_to_edit_long_click_to_delete">Demo Realm\nClick To Edit, Long Click To Delete</string>
    <string name="demo_sqlite_click_to_edit_long_click_to_delete">Demo SQLite\nClick To Edit, Long Click To Delete</string>
    <string name="demo_sqlite_encryption_click_to_edit_long_click_to_delete">Demo SQLite Encryption\nClick To Edit, Long Click To Delete</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_in_non_scroll_view">VerticalSeekBar in non-ScrollView</string>
    <string name="text_in_scroll_view">VerticalSeekBar in ScrollView</string>
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="lorem" tools:ignore="Typos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="loading">Loading&#8230;</string>
    <string name="scene">Scene</string>
    <string name="scene_1">1</string>
    <string name="scene_2">2</string>
    <string name="scene_3">3</string>
    <string name="scene_4">4</string>
    <string name="additional_message">This text fades in and out.</string>
    <string name="image_header">%1$s by %2$s</string>
    <string-array name="vertical_positions">
        <item>ABOVE</item>
        <item>ALIGN_BOTTOM</item>
        <item>CENTER</item>
        <item>ALIGN_TOP</item>
        <item>BELOW</item>
    </string-array>
    <string-array name="horizontal_positions">
        <item>LEFT</item>
        <item>ALIGN_RIGHT</item>
        <item>CENTER</item>
        <item>ALIGN_LEFT</item>
        <item>RIGHT</item>
    </string-array>
    <string name="width">WIDTH</string>
    <string name="height">HEIGHT</string>
    <string name="picker_menu">Picker Menu</string>
    <string name="bs_image_picker">BS Image Picker</string>
    <string name="single_selection">Single Selection</string>
    <string name="single_selection_crop">Single Selection - Crop</string>
    <string name="menu_activity_transition">Menu Activity Transition</string>
    <string name="no_animation">No animation</string>
    <string name="system_default">System default</string>
    <string name="slide_left">slide Left</string>
    <string name="slide_right">slide Right</string>
    <string name="slide_down">slide down</string>
    <string name="slide_up">slide up</string>
    <string name="fade">fade</string>
    <string name="zoom">zoom</string>
    <string name="windmill">windmill</string>
    <string name="diagonal">diagonal</string>
    <string name="spin">spin</string>
    <string name="menu_custom_view">Menu Custom View</string>
    <string name="action_bar">Action bar</string>
    <string name="answerview">AnswerView</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="bottom_sheet">BottomSheet</string>
    <string name="button">Button</string>
    <string name="compas">Compas</string>
    <string name="dialog">Dialog</string>
    <string name="draggable_flipview">Draggable FlipView</string>
    <string name="edittext">EditText</string>
    <string name="facebook_comment">Facebook Comment</string>
    <string name="imageview">Imageview</string>
    <string name="layout">Layout</string>
    <string name="lcardview">LCardView</string>
    <string name="ldebugview">Ldebugview</string>
    <string name="menu">Menu</string>
    <string name="navigation">Navigation</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="progress_loading_view">Progress/Loading View</string>
    <string name="scratchview">ScratchView</string>
    <string name="recyclerview">Recycler view</string>
    <string name="scrollablepanel">ScrollablePanel</string>
    <string name="seek_bar">Seekbar</string>
    <string name="sticker">Sticker</string>
    <string name="switch_toggle">Switch - Toggle</string>
    <string name="textview">Textview</string>
    <string name="tree_view">Tree View</string>
    <string name="videoview">Videoview</string>
    <string name="view_pager">View Pager</string>
    <string name="wwl_music">WWL Music</string>
    <string name="wwl_video">WWL Video</string>
    <string name="calendar">Calendar</string>
    <string name="indicator">Indicator</string>
    <string name="wheel_spinner">Wheel spinner</string>
    <string name="item_0">Item 0</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="item_6">Item 6</string>
    <string name="item_7">Item 7</string>
    <string name="item_8">Item 8</string>
    <string name="item_9">Item 9</string>
    <string name="item_10">Item 10</string>
    <string name="item_11">Item 11</string>
    <string name="item_12">Item 12</string>
    <string name="item_13">Item 13</string>
    <string name="item_14">Item 14</string>
    <string name="item_15">Item 15</string>
    <string name="item_16">Item 16</string>
    <string name="item_17">Item 17</string>
    <string name="item_18">Item 18</string>
    <string name="item_19">Item 19</string>
    <string name="linear_layout_manager_vertical">LinearLayoutManager vertical</string>
    <string name="linear_layout_manager_horizontal">LinearLayoutManager horizontal</string>
    <string name="grid_layout_manager_2">GridLayoutManager 2</string>
    <string name="grid_layout_manager_3">GridLayoutManager 3</string>
    <string name="staggered_grid_layout_manager_2_vertical">StaggeredGridLayoutManager 2 Vertical</string>
    <string name="staggered_grid_layout_manager_4_horizontal">StaggeredGridLayoutManager 4 Horizontal</string>
    <string name="codeview">CodeView</string>
    <string name="drag_view">DragView</string>
    <string name="finger_paint_view">FingerPaintView</string>
    <string name="menu_graph_view_activity">MenuGraphViewActivity</string>
    <string name="simple_rating_bar">SimpleRatingBar</string>
    <string name="stack_expandable_view_activity">StackExpandableViewActivity</string>
    <string name="web_view">Web View</string>
    <string name="wheel_view_activity">WheelViewActivity</string>
    <string name="corner_sheet">CornerSheet</string>
    <string name="lucky_wheel_activity">LuckyWheelActivity</string>
</resources>