<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/item_0" />
    <item android:title="@string/item_1" />
    <item android:title="@string/item_2" />
    <item android:title="@string/item_3" />
    <item android:title="@string/item_4" />
    <item android:title="@string/item_5" />
    <item android:title="@string/item_6" />
    <item android:title="@string/item_7" />
    <item android:title="@string/item_8" />
    <item android:title="@string/item_9" />
    <item android:title="@string/item_10" />
    <item android:title="@string/item_11" />
    <item android:title="@string/item_12" />
    <item android:title="@string/item_13" />
    <item android:title="@string/item_14" />
    <item android:title="@string/item_15" />
    <item android:title="@string/item_16" />
    <item android:title="@string/item_17" />
    <item android:title="@string/item_18" />
    <item android:title="@string/item_19" />
</menu>
