<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor">

    <com.loitp.views.ab.LActionBar
        android:id="@+id/lActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <com.factor.bouncy.BouncyNestedScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollVertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lActionBar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_padding_medium"
            android:paddingBottom="@dimen/margin_padding_medium">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btActionBar"
                style="@style/ButtonMenu"
                android:text="@string/action_bar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAndroidRibbon"
                style="@style/ButtonMenu"
                android:text="AndroidRibbon" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAnswerView"
                style="@style/ButtonMenu"
                android:text="@string/answerview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btBottomBarBlur"
                style="@style/ButtonMenu"
                android:text="@string/bottom_navigation_bar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btBottomSheet"
                style="@style/ButtonMenu"
                android:text="@string/bottom_sheet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btButton"
                style="@style/ButtonMenu"
                android:text="@string/button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCalendar"
                style="@style/ButtonMenu"
                android:text="@string/calendar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCardView"
                style="@style/ButtonMenu"
                android:text="Card View" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCodeView"
                style="@style/ButtonMenu"
                android:text="@string/codeview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCodeViewKbiakov"
                style="@style/ButtonMenu"
                android:text="CodeView-Android" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCornerSheet"
                style="@style/ButtonMenu"
                android:text="@string/corner_sheet" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDialog"
                style="@style/ButtonMenu"
                android:text="@string/dialog" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDraggableFlipView"
                style="@style/ButtonMenu"
                android:text="@string/draggable_flipview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDragView"
                style="@style/ButtonMenu"
                android:text="@string/drag_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btFancyShowcase"
                style="@style/ButtonMenu"
                android:text="Fancy showcase" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btEditText"
                style="@style/ButtonMenu"
                android:text="@string/edittext" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btFbCmt"
                style="@style/ButtonMenu"
                android:text="@string/facebook_comment" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btFingerPaintView"
                style="@style/ButtonMenu"
                android:text="@string/finger_paint_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btMenuGraphViewActivity"
                style="@style/ButtonMenu"
                android:text="@string/menu_graph_view_activity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btImageView"
                style="@style/ButtonMenu"
                android:text="@string/imageview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btIndicator"
                style="@style/ButtonMenu"
                android:text="@string/indicator" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLayout"
                style="@style/ButtonMenu"
                android:text="@string/layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLCardView"
                style="@style/ButtonMenu"
                android:text="@string/lcardview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLDebugView"
                style="@style/ButtonMenu"
                android:text="@string/ldebugview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLuckyWheelActivity"
                style="@style/ButtonMenu"
                android:text="@string/lucky_wheel_activity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btMenu"
                style="@style/ButtonMenu"
                android:text="@string/menu" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNavigation"
                style="@style/ButtonMenu"
                android:text="@string/navigation" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btPopupMenu"
                style="@style/ButtonMenu"
                android:text="@string/popup_menu" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btProgressLoading"
                style="@style/ButtonMenu"
                android:text="@string/progress_loading_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btRecyclerView"
                style="@style/ButtonMenu"
                android:text="@string/recyclerview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btScratchView"
                style="@style/ButtonMenu"
                android:text="@string/scratchview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btScrollablePanel"
                style="@style/ButtonMenu"
                android:text="@string/scrollablepanel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSeekBar"
                style="@style/ButtonMenu"
                android:text="@string/seek_bar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSimpleRatingBar"
                style="@style/ButtonMenu"
                android:text="@string/simple_rating_bar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSpotlight"
                style="@style/ButtonMenu"
                android:text="Spotlight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btStackExpandableViewActivity"
                style="@style/ButtonMenu"
                android:text="@string/stack_expandable_view_activity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSticker"
                style="@style/ButtonMenu"
                android:text="@string/sticker" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSwitch"
                style="@style/ButtonMenu"
                android:text="@string/switch_toggle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btTextView"
                style="@style/ButtonMenu"
                android:text="@string/textview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btTreeView"
                style="@style/ButtonMenu"
                android:text="@string/tree_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btTagSphere"
                style="@style/ButtonMenu"
                android:text="Tag Sphere" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btVideoView"
                style="@style/ButtonMenu"
                android:text="@string/videoview" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btViewPager"
                style="@style/ButtonMenu"
                android:text="@string/view_pager" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWebView"
                style="@style/ButtonMenu"
                android:text="@string/web_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWheelSpinner"
                style="@style/ButtonMenu"
                android:text="@string/wheel_spinner" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWheelView"
                style="@style/ButtonMenu"
                android:text="@string/wheel_view_activity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWwlMusic"
                style="@style/ButtonMenu"
                android:text="@string/wwl_music" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btWwlVideo"
                style="@style/ButtonMenu"
                android:text="@string/wwl_video" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.factor.bouncy.BouncyNestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
