<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        style="@style/ScrollVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/padding_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_activity_transition"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_20" />

            <Button
                android:id="@+id/bt_no_anim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_animation" />

            <Button
                android:id="@+id/bt_system_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_default" />

            <Button
                android:id="@+id/bt_slide_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_left" />

            <Button
                android:id="@+id/bt_slide_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_right" />

            <Button
                android:id="@+id/bt_slide_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_down" />

            <Button
                android:id="@+id/bt_slide_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_up" />

            <Button
                android:id="@+id/bt_fade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fade" />

            <Button
                android:id="@+id/bt_zoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zoom" />

            <Button
                android:id="@+id/bt_windmill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/windmill" />

            <Button
                android:id="@+id/bt_diagonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diagonal" />

            <Button
                android:id="@+id/bt_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spin" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

